[gd_scene load_steps=6 format=2]

[ext_resource path="res://coin_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://coin.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/powerUp2.ogg" type="AudioStream" id=3]
[ext_resource path="res://bounce.tres" type="Animation" id=4]



[sub_resource type="CircleShape2D" id=1]
radius = 45.4885

[node name="coin" type="Area2D"]
position = Vector2( 0, -9.22162 )
collision_layer = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "spin"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = ExtResource( 4 )

[node name="SoundCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
